2012-01-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-stdarg-4.c:
	  Fix bug #3463344.

2012-01-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-gbz80.def:
	  Fix remaining gbz80 regression failures when using --max-allocs-per-node 5.
	* src/z80/gen.c:
	  Fix right shift for gbz80 using --max-allocs-per-node 1.

2012-01-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix comparison and unary minus for gbz80 when many operands are on the stack.

2012-01-26 Raphael Neider <rneider AT web.de>

	* src/pic14/pcodepeep.c,
	  src/pic14/gen.c,
	  src/pic14/glue.c,
	  src/pic16/device.c,
	  src/pic16/pcodepeep.c,
	  src/pic16/gen.c,
	  src/pic16/pcoderegs.c,
	  src/pic16/ralloc.c,
	  src/pic16/pcode.c,
	  src/pic16/genutils.c: avoid compiler warnings

2012-01-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/cpp/libcpp/internal.h,
	  support/cpp/sdcpp.c,
	  support/cpp/libcpp/lex.c:
	  Remove support for _asm and _endasm, rename macros that had names reserved for the implementation.
	* support/regression/tests/key.c:
	  Regression test for obsolete keywords.

2012-01-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Correctly handle some forgotten corner cases in the fix for #3427564.

2012-01-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* doc/sdccman.lyx:
	  Mention -mz180, -mr2k, named address spaces and use non-deprectaed form of sdcc-specific keywords.
	* src/SDCC.lex:
	  Remove support for deprecated keywords.
	* src/z80/gen.c:
	  Fixed bug #3427564.

2012-01-25 Borut Razem <borut.razem AT gmail.com>

	* device/lib/make51lib.bat: rewritten for ar / sdranlib

2012-01-23 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: pic14 enhanced cores enabled by default

2012-01-22 Borut Razem <borut.razem AT gmail.com>
