@@ -1,3 +1,8 @@
+2012-01-28 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/gen.c (genJumpTab): fixed bug 3480545
+	* support/regression/tests/bug3480545.c: new, added
+
 2012-01-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/gen.c,
